fix: use #8796ab for price in dark mode

--- a/src/components/foodCards/FoodCardItem.css
+++ b/src/components/foodCards/FoodCardItem.css
@@ -69,7 +69,8 @@ html.dark .single-food-card .content h1 {
   color: #d3e2f7;
 }
 
-html.dark .single-food-card .content p {
+html.dark .single-food-card .content p,
+html.dark .price span {
   color: #8796ab;
 }
 
